# scaling-data-harvesting

./: .gitignore  Makefile  README.md  genezio.yaml  package-lock.json
backend/: .env.example  pyproject.toml  requirements.txt  test.py
backend/src/: crawler.py  db.py  errors.py  gateways.py  llm.py  scheduler.py  schemas.py  templates.py  utils.py
backend/src/crawlers/: __init__.py
frontend/: package-lock.json  package.json
frontend/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  trace
frontend/.next/cache/: .rscinfo  .tsbuildinfo
frontend/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  5.pack  6.pack  index.pack  index.pack.old
frontend/.next/cache/webpack/edge-server-production/: index.pack
frontend/.next/cache/webpack/server-production/: 1.pack  index.pack  index.pack.old
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 883.js
frontend/.next/server/pages/: 404.html  500.html
frontend/.next/static/chunks/: main-app-e0487e3973c2af9a.js
frontend/.next/static/css/: 0a401f068f1e5b74.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: page.tsx
frontend/components/ui/: button.tsx
(+5 files in other folders)
