[tool.poetry]
name = "scalling-data-harvesting"
version = "0.1.0"
description = "Creating a High-Performance Web Crawling Infrastructure with Genezio"
authors = ["Rares Istoc <istoc.rares@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
httpx = "^0.28.1"
pymongo = "^4.10.1"
pydantic = "^2.10.5"
instaloader = "^4.14"
openai = "^1.59.6"
transformers = "^4.48.0"
langchain = "^0.3.14"
backoff = "^2.2.1"
numpy = ">=1.22.4,<2"
unstructured = "^0.16.13"
instructor = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
